--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
     <!--CSS STYLES-->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="./src/css/style.css">
-    <!--END CSS-->
+    <link rel="stylesheet" href="./src/css/codemirror.css">
 
+
+    <!--END CSS-->
     <title>Quetzal olc2</title>
 </head>
 
@@ -36,7 +38,7 @@
                 <button class="btn btn-danger" onclick="addTab()"><span class="oi oi-plus"></span> Add Tab</button>
                 <button class="btn btn-success" onclick="interpretar()"><span class="oi oi-play-circle"></span>Interpretar</button>
                 <button class="btn btn-success" onclick="obtenerSaludo()"><span class="oi oi-play-circle"></span>Traducir</button>
-
+                <button class="btn btn-success" onclick="javascript:leerEntrada();"><span class="oi oi-play-circle"></span>TEST </button>
                 <div class="btn-group dropup">
                     <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Reportes
@@ -50,6 +52,11 @@
                 </div>
                 <input class="btn btn-primary" type="file" id="fileinput" onchange="openArchive(event)" />
             </div>
+        </div>
+        <h6> ENTRADA </h6>
+        <!-- AREA DE TEXTO PARA CONSULTA -->
+        <div id="divEntrada">
+            <textarea id="txtEntrada" name="txtEntrada"></textarea>
         </div>
         <div class="row">
             <div id="analizador_area" class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-xs-12">
@@ -79,6 +86,26 @@
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
     <script type="text/javascript" src="./src/js/index.js"></script>
+    <script src="./Gramatica/gramatica.js"></script>
+    <script src="./src/js/codemirror.js"></script>
+
+
+    <script>
+        var entrada = CodeMirror.fromTextArea(document.getElementById("txtEntrada"), {
+            lineNumbers: true,
+            mode: "javascript"
+
+        });
+        entrada.setSize(450, 500);
+
+        function leerEntrada() {
+            //var result = gramatica.parse(entrada.getDoc().getValue());
+            var result = gramatica.parse(entrada.getDoc().getValue());
+            //var test = entrada;
+            console.log(result);
+        }
+    </script>
+
 </body>
 
 </html>
